--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
             <a style="
                 display: flex;
                 justify-content: center;
+                margin-top: 5vh;
+                margin-bottom: 5vh;
             " href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button style="
-                font-size: 2em;
+                font-size: 4vh;
                 " type="button" class="btn btn-success">My contacts</button></a>
         </div>
     </div>
